# thermal_camera

./: .gitignore  .gitmodules  Makefile  README.md  application.cpp  application.h  applicationui.h  colormap.cpp  colormap.h  display_er_oledm015.cpp  edge_detector.h  main.cpp  renderer.cpp  renderer.h  textbox.cpp  textbox.h  version.cpp  version.h
_tools/colormap_encoder/: thermalcolormap.sci
_tools/qtsimulator/: CMakeLists.txt  frame_source.cpp  frame_source.hpp  simapplication.cpp
colormap_encoder/: colormap.cpp  colormap_encoder.cpp  jetcolormap  thermalcolormap  thermalcolormap.sci
config/: Makefile.inc  miosix_settings.h  mxgui_settings.h
config/arch/cortexM3_stm32f2/stm32f205_generic/: board_settings.h
drivers/: MLX90640_API.cpp  MLX90640_API.h  MLX90640_I2C_Driver.cpp  MLX90640_I2C_Driver.h  display_er_oledm015.cpp  display_er_oledm015.h  edge_detector.h  flash.cpp  flash.h  hwmapping.h  misc.cpp  misc.h  mlx90640.cpp  mlx90640.h  mlx90640frame.h  options_save.cpp  options_save.h  usb_tinyusb.cpp  usb_tinyusb.h
hardware_design/: bom.csv  ibom.html  thermal_camera_v2.kicad_pcb  thermal_camera_v2.kicad_pro  thermal_camera_v2.kicad_sch
hardware_design/disply-mod/: Readme.txt
tinyusb/: Makefile  tusb_config.h  tusb_os_custom.h
